docs/examples/units-extension/Expected.txt
Demo.java:14: error: [assignment.type.incompatible] incompatible types in assignment.
        frq = 5;
              ^
  found   : @Dimensionless int
  required: @Hz double
Demo.java:64: error: [assignment.type.incompatible] incompatible types in assignment.
        @Hz int badTernaryAssign = seconds > 10 ? hertz : kilohertz;
                                                ^
  found   : @Frequency int
  required: @Hz int
2 errors
